Fixed side menu items flickering when keeping the cursor just underneath them

--- a/src/components/sideMenuItems.css
+++ b/src/components/sideMenuItems.css
@@ -17,8 +17,20 @@ p {
     padding: 4px;
     border-radius: 8px;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 2px 1px 2px;
-    
+
     transition: background-color, transform, box-shadow, 0.25s;
+}
+
+.prevent-flicker {
+    position: absolute;
+    width: 100%;
+    height: 24px;
+    left: 50%;
+    top: calc(100% - 12px);
+    transform: translate(-50%, -50%);
+    z-index: -1;
+    transition: transform 0.25s;
+    display: none;
 }
 
 .side-menu-item:not(.cannot-afford):hover {
@@ -30,6 +42,10 @@ p {
     transition: background-color, transform, box-shadow, 0.25s;
 }
 
+.side-menu-item:not(.cannot-afford):hover .prevent-flicker {
+    transform: translate(-50%, calc(-50% + 6px));
+    display: inline;
+}
 
 .generator-image {
     /* improve unless it works */
